<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="ifRoom"
        android:title="@string/menu_share"/>
    <item
        android:id="@id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom"
        android:title="@string/menu_search"/>
    <item
        android:id="@id/action_sort"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        app:showAsAction="ifRoom"
        android:title="@string/action_sort">
        <menu>
            <item
                android:id="@id/action_sort_by_name"
                android:title="@string/action_sort_by_name"/>
            <item
                android:id="@id/action_sort_by_package"
                android:title="@string/action_sort_by_package"/>
            <item
                android:id="@id/action_sort_by_install"
                android:title="@string/action_sort_by_install"/>
            <item
                android:id="@id/action_sort_by_update"
                android:title="@string/action_sort_by_update"/>
        </menu>
    </item>
    <item
        android:id="@id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="ifRoom"
        android:title="@string/menu_settings"/>
    <item
        android:id="@id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="ifRoom"
        android:title="@string/menu_about"/>

</menu>